--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
 <head>
     <!-- Meta tags -->
     <meta charset="UTF-8">
-    <meta name="keywords" content="...">
-    <meta name="description" content="...">
-    <meta name="keywords" lang="ka" content="...">
+    <meta name="keywords"
+        content="Tours, Tour, Adventure, Georgia, Svaneti, Tusheti, Khevsureti, Tourism, Hiking, Trekking, Trail, Mountains, Sightseeing, Caucasus, Company, Tbilisi, Batumi, Black Sea, Tent, Camping, Camp, Jeep Tour, Tour Company, Lake, Waterfall, Fortress, Church, Kutaisi, Kakheti, Signagi, Kazbegi, Kazbek">
+    <meta name="description"
+        content="Bisna - the best adventure tourism company as well as advanced and powerful tourism information platform in Georgia. Plan your Georgian adventure with us.">
+    <meta name="keywords" lang="ka"
+        content="ტურები, ტური, თავგადასავალი, სათავგადასავლო, საქართველო, სვანეთი, თუშეთი, ხევსურეთი, ტურიზმი, ლაშქრობა, საფეხმავლო, ბილიკი, მარშრუტი, მთები, ღირსშესანიშნაობა, კავკასია, კავკასიონი, კომპანია, თბილისი, ბათუმი, შავი ზღვა, კარავი, კემპინგი, ბანაკი, ჯიპ ტური, ტურისტული კომპანია, ტბა, ჩანჩქერი, ციხე, ციხე-სიმაგრე, ეკლსია, ქუთაისი, კახეთი, სიღნაღი, ყაზბეგი">
     <meta name="description" lang="ka" content="...">
+    <meta property="og:title" content="Bisna - tours in Georgia">
+    <meta property="og:description"
+        content="Bisna - the best adventure tourism company as well as advanced and powerful tourism information platform in Georgia. Plan your Georgian adventure with us.">
+    <meta property="og:url" content="https://bisna.ge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
@@ -30,11 +37,183 @@
 <body>
 
     <!--=============== Header start ===============-->
+    <header>
+        <nav class="navbar navbar-expand-xl">
+            <a class="navbar-brand" href="#"><img src="Assets/Image/Logo/logo.png" height="35" alt="Logo"></a>
+            <div class="offcanvas offcanvas-start" id="navbar" tabindex="-1" aria-labelledby="navbarLabel">
+                <div class="offcanvas-header">
+                    <h6 class="offcanvas-title" id="navbarLabel">სანავიგაციო მენიუ</h6>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav">
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">მთავარი</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ტურები</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ადგილები</a>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="tourist-products" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span>ტურისტული პროდუქტები</span> <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                            <ul class="dropdown-menu center menu" aria-labelledby="tourist-products">
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-hotel"></i> დაბინავება</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-burger"></i> კვება</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-face-smile"></i> გართობა</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-face-surprise"></i> ექსტრემი
+                                        & რეკრეაცია</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-person-half-dress"></i>
+                                        გიდები</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-truck-moving"></i>
+                                        ტრანსპორტირება</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-car-side"></i>
+                                        ავტოგაქირავება</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="gallery" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span>გალერეა</span> <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                            <ul class="dropdown-menu center menu" aria-labelledby="gallery">
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-image"></i> ფოტო გალერეა</a>
+                                </li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-clapperboard"></i> ვიდეო
+                                        გალერეა</a></li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="about-we" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                <span>ჩვენ შესახებ</span> <i class="fa-solid fa-chevron-down"></i>
+                            </a>
+                            <ul class="dropdown-menu center menu" aria-labelledby="about-we">
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i> ბისნას
+                                        შესახებ</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i>
+                                        საქართველოს შესახებ</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i> როგორ
+                                        დავჯავშნოთ ტური</a></li>
+                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-circle-info"></i> ხ.დ.შ</a>
+                                </li>
+                            </ul>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">დაჯავშნე ტური</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">კონტაქტი</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <!-- Buttons list -->
+            <div class="d-flex justify-content-center align-items-center nav-btns">
+
+                <div class="line">
+                    <!-- Navbar toggler -->
+                    <button class="navbar-toggler btn-primary btn-round bn-responsive" type="button"
+                        data-bs-toggle="offcanvas" data-bs-target="#navbar" aria-controls="navbar">
+                        <i class="fa-solid fa-bars-staggered"></i>
+                    </button>
+
+                    <!-- Search button -->
+                    <button id="" class="btn btn-primary btn-round bn-responsive" data-bs-toggle="modal" data-bs-target="#searchMenu">
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                    </button>
+
+                    <!-- Favourite button -->
+                    <button id="" class="btn btn-primary btn-round bn-responsive" data-bs-toggle="dropdown">
+                        <i class="fa-solid fa-heart"></i>
+                    </button>
+
+
+                    <!-- Dark & Light mode -->
+                    <div class="dropdown">
+                        <button id="theme-btn" class="btn btn-primary btn-round bn-responsive"
+                            data-bs-toggle="dropdown">
+                            <i id="theme-icon" class="fa fa-moon"></i>
+                        </button>
+                        <ul class="dropdown-menu center">
+                            <li><a class="dropdown-item" id="light-option" href="#">დღის რეჟიმი</a></li>
+                            <li><a class="dropdown-item" id="dark-option" href="#">ღამის რეჟიმი</a></li>
+                            <li><a class="dropdown-item" id="system-option" href="#">სისტემა</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- Autorization button -->
+                <button class="btn btn-primary">შესვლა</button>
+
+                <!-- Language mode -->
+                <div class="dropdown lang-menu">
+                    <button id="" class="btn btn-primary lang-btn" data-bs-toggle="dropdown">
+                        <img src="Assets/Image/Lang/Geo.png" height="15" alt="Geo"> GEO <i
+                            class="ri-expand-up-down-line"></i>
+                    </button>
+                    <ul class="dropdown-menu center">
+                        <li><a class="dropdown-item" id="#" href="#"><img src="Assets/Image/Lang/Geo.png" height="15"
+                                    alt="Geo"> GEO</a></li>
+                        <li><a class="dropdown-item" id="#" href="#"><img src="Assets/Image/Lang/Eng.png" height="15"
+                                    alt="Eng"> ENG</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+        <div class="modal fade" id="searchMenu" tabindex="-1" aria-labelledby="searchMenuLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="searchMenuLabel">Modal title</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  ...
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn w-100 btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+    </header>
     <!--================ Header end ================-->
 
 
-    <!--=============== ===============-->
-    <!--=============== ===============-->
+    <!--=============== Hero start ===============-->
+    <!-- <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">Slide 1</div>
+            <div class="swiper-slide">Slide 2</div>
+            <div class="swiper-slide">Slide 3</div>
+            <div class="swiper-slide">Slide 4</div>
+            <div class="swiper-slide">Slide 5</div>
+            <div class="swiper-slide">Slide 6</div>
+            <div class="swiper-slide">Slide 7</div>
+            <div class="swiper-slide">Slide 8</div>
+            <div class="swiper-slide">Slide 9</div>
+        </div>
+        <div class="swiper-pagination"></div>
+    </div> -->
+    <!--=============== Hero end ===============-->
 
 
     <!--=============== ===============-->
